--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,6 +88,19 @@
 }
 
 
+@keyframes scroll {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
 
+.animate-scroll {
+  display: flex;
+  animation: scroll 20s linear infinite;
+  will-change: transform;
+}
 
 
