--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -130,3 +130,19 @@
   opacity: 0;
 }
 
+.star {
+  animation: float 5s ease-in-out infinite;
+  transition: transform 0.1s ease-out;
+}
+
+@keyframes float {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(10px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
